# imessage-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: db.py  sender.py  server.py  tools.py
